--- a/src/main/resources/view/AttendanceView.fxml
+++ b/src/main/resources/view/AttendanceView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXCheckBox?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -17,7 +18,7 @@
       <TextField fx:id="txtStatus" layoutX="152.0" layoutY="75.0" />
       <TextField fx:id="txtDate" layoutX="152.0" layoutY="119.0" />
       <TextField fx:id="txtEmpId" layoutX="152.0" layoutY="168.0" />
-      <TableView fx:id="tblAttendence" layoutX="45.0" layoutY="227.0" prefHeight="193.0" prefWidth="489.0">
+      <TableView fx:id="tblAttendence" layoutX="56.0" layoutY="261.0" prefHeight="193.0" prefWidth="489.0">
         <columns>
           <TableColumn prefWidth="114.0" text="Attend id" />
           <TableColumn prefWidth="95.0" text="Status" />
@@ -28,5 +29,8 @@
       <Button fx:id="btnAdd" layoutX="440.0" layoutY="38.0" mnemonicParsing="false" onAction="#add" prefHeight="26.0" prefWidth="72.0" text="ADD" />
       <Button fx:id="btnUpdate" layoutX="440.0" layoutY="90.0" mnemonicParsing="false" onAction="#update" text="UPDATE" />
       <Button fx:id="btnDelete" layoutX="440.0" layoutY="153.0" mnemonicParsing="false" onAction="#delete" prefHeight="26.0" prefWidth="72.0" text="DELETE" />
+      <TextField fx:id="txtTime" layoutX="152.0" layoutY="214.0" />
+      <Label layoutX="45.0" layoutY="218.0" text="Time" />
+      <JFXCheckBox fx:id="checkAttend" layoutX="440.0" layoutY="227.0" onAction="#fillStatus" text="Attend" />
    </children>
 </AnchorPane>
