--- a/src/main/resources/view/EmpViolationView.fxml
+++ b/src/main/resources/view/EmpViolationView.fxml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Ellipse?>
+<?import javafx.scene.shape.Rectangle?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="lk.sltb.sltbmanagement.controller.EmpViolationViewController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.sltb.sltbmanagement.controller.EmpViolationViewController">
+   <children>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#f7374f" height="19.0" layoutX="-2.0" layoutY="37.0" stroke="BLACK" strokeType="INSIDE" width="349.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#f7374f" height="19.0" layoutX="-16.0" layoutY="75.0" stroke="BLACK" strokeType="INSIDE" width="349.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#f7374f" height="19.0" layoutX="446.0" layoutY="37.0" stroke="BLACK" strokeType="INSIDE" width="387.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#f7374f" height="19.0" layoutX="477.0" layoutY="75.0" stroke="BLACK" strokeType="INSIDE" width="356.0" />
+      <Ellipse fill="WHITE" layoutX="399.0" layoutY="66.0" radiusX="94.0" radiusY="52.0" stroke="BLACK" strokeType="INSIDE" />
+      <ImageView fitHeight="140.0" fitWidth="237.0" layoutX="281.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../../../Downloads/a-clean-modern-product-shot-advertisemen_xgTwaxEdSme8nRKpFCSrIw_k7egH5dxR3eJzqRpOOBy4g-removebg-preview.png" />
+         </image>
+      </ImageView>
+   </children>
 </AnchorPane>
